fix: flex buttons on small screens

--- a/src/css/comment-form.scss
+++ b/src/css/comment-form.scss
@@ -12,7 +12,7 @@
       height: 0;
     }
   }
-  
+
   .comments {
     &__list.preview {
       @include hide;
@@ -100,6 +100,10 @@
             flex: 1 0 120px;
             padding: 8px;
           }
+        }
+
+        &.buttons {
+          flex-direction: row;
         }
       }
     }
